Fixed mechanism by which stack based incoming arguments are treated by the linear scan register allocator (LSRA) to revive the optimization whereby these stack slots are usable as spill slots.
More cleaning up and documenting of linear scan register allocator.

Partial implementation of builtin for pinning a variable to the stack and exposing its address. This is required for boxing Object parameters as JNI handles for native calls.

Renamed CallingConvention to CiCallingConvention and moved it to the CRI project.

Removed general purpose and race-prone CiConstant cache. There is now a simpler, race free cache for the first 100 int constants which covers the most frequent constant values used.

Extracted LIRInstruction.OperandSlot to new top level class named LIROperand.

Added new IntList class which encapsulates an expandable and indexable list of ints. This class avoids the boxing/unboxing incurred by ArrayList<Integer>.